--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a1"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -14,11 +15,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.a1.MainActivity"
+            android:name=".UsingPreferencesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -26,7 +26,7 @@
         <activity android:name=".AppPreferenceActivity"
                   android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="net.learn2develop.AppPreferenceActivity" />
+				<action android:name="com.example.a1.AppPreferenceActivity" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
